@@ -19,6 +19,7 @@ Version 1.0.10 to be released
 - Enh #585: Added CChainedCacheDependency::setDependencies() (Qiang)
 - Enh #598: Added CCaptchaAction::transparent (Qiang)
 - Enh #600: Modified CHttpSession to allow open and close session multiple times (Qiang)
+- Enh #612: Added YiiBase::registerAutoloader (Qiang)
 - Enh #613: Enhanced Oracle driver to allow using views with AR (Qiang)
 - Enh #626: Added labelOptions for checkbox and radiobutton lists in CHtml (Qiang)
 - Enh #623: Added the optional $params to CDbCommand::execute() and query*() methods (Qiang)
